--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "multisort": "^0.5.3",
     "node": "^19.3.0",
     "node-superfetch": "^0.3.3",
+    "nodemon": "^3.0.3",
     "quickmongo": "^5.2.0"
   },
   "engines": {
